# riplex

./: README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/: changelog.md  troubleshooting.md
docs/getting-started/: installation.md
issues/: planned-features.md
src/riplex/: scanner.py  splitter.py  tagger.py
src/riplex/disc/: makemkv.py
src/riplex_app/: updater.py
src/riplex_app/screens/: folder_picker.py  welcome.py
src/riplex_cli/commands/: setup.py
tests/: test_scanner.py  test_splitter.py  test_tagger.py  test_updater.py
